cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_04979_crm.json
{
  "AWSTemplateFormatVersion":"2010-09-09",
  "Description":"CRM CloudFormation stack.",
  "Metadata":{
    "AWS::CloudFormation::Interface":{
      "ParameterGroups":[{
        "Label":{"default":"Main configuration"},
        "Parameters":["Environment","SSHPublicKey"]
      },{
        "Label":{"default":"Amazon S3 configuration"},
        "Parameters":["S3BucketPrefix"]
      },{
        "Label":{"default":"Amazon EC2 configuration"},
        "Parameters":["EC2AMIID"]
      }],
      "ParameterLabels":{
        "Environment":{"default":"Environment"},
        "SSHPublicKey":{"default":"SSH public key"},
        "S3BucketPrefix":{"default":"S3 bucket prefix"},
        "EC2AMIID":{"default":"EC2 AMI identifier"}
      }
    }
  },
  "Parameters":{
    "Environment":{
      "Type":"String",
      "Default":"prd",
      "AllowedValues":["prd","stg"],
      "Description":"Enter environment name."
    },
    "SSHPublicKey":{
      "Type":"String",
      "Description":"Enter SSH public key content."
    },
    "S3BucketPrefix":{
      "Type":"Number",
      "Description":"Enter S3 bucket prefix. Please provide your 10 digit mobile phone number.",
      "ConstraintDescription":"must only contain numbers"
    },
    "EC2AMIID":{
      "Type":"String",
      "Description":"Enter EC2 AMI identifier."
    }
  },
  "Conditions":{
    "IsPRD":{"Fn::Equals":[{"Ref":"Environment"},"prd"]}
  },
  "Resources":{
    "CRMIAMEC2RL":{
      "Type":"AWS::IAM::Role",
      "Properties":{
        "RoleName":"crm-iam-ec2-rl",
        "AssumeRolePolicyDocument":{
          "Version":"2012-10-17",
          "Statement":[{
            "Effect":"Allow",
            "Principal":{
              "Service":"ec2.amazonaws.com"
            },
            "Action":"sts:AssumeRole"
          }]
        },
        "ManagedPolicyArns":[
          "arn:aws:iam::aws:policy/AmazonS3FullAccess",
          "arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly",
          "arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy",
          "arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy"
        ],
        "Path":"/",
        "Tags":[
          {"Key":"Name","Value":"crm-iam-ec2-rl"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"crm"},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "CRMIAMEC2RLINSTPF":{
      "Type":"AWS::IAM::InstanceProfile",
      "DependsOn":["CRMIAMEC2RL"],
      "Properties":{
        "InstanceProfileName":"crm-iam-ec2-rl-inst-pf",
        "Roles":[{"Ref":"CRMIAMEC2RL"}],
        "Path":"/"
      }
    },
    "CRMVPCNET":{
      "Type":"AWS::EC2::VPC",
      "Properties":{
        "CidrBlock":{"Fn::If":["IsPRD","11.1.0.0/16","12.1.0.0/16"]},
        "EnableDnsSupport":true,
        "EnableDnsHostnames":true,
        "InstanceTenancy":"default",
        "Tags":[
          {"Key":"Name","Value":"crm-vpc-net"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"crm"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "CRMVPCIG":{
      "Type":"AWS::EC2::InternetGateway",
      "DependsOn":["CRMVPCNET"],
      "Properties":{
        "Tags":[
          {"Key":"Name","Value":"crm-vpc-ig"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"crm"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "CRMVPCIGATT":{
      "Type":"AWS::EC2::VPCGatewayAttachment",
      "DependsOn":["CRMVPCNET","CRMVPCIG"],
      "Properties":{
        "VpcId":{"Ref":"CRMVPCNET"},
        "InternetGatewayId":{"Ref":"CRMVPCIG"}
      }
    },
    "CRMVPCPUBRTT":{
      "Type":"AWS::EC2::RouteTable",
      "DependsOn":["CRMVPCNET"],
      "Properties":{
        "VpcId":{"Ref":"CRMVPCNET"},
        "Tags":[
          {"Key":"Name","Value":"crm-vpc-pub-rtt"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"crm"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "CRMVPCPUBRTTRT1":{
      "Type":"AWS::EC2::Route",
      "DependsOn":["CRMVPCIG","CRMVPCIGATT","CRMVPCPUBRTT"],
      "Properties":{
        "RouteTableId":{"Ref":"CRMVPCPUBRTT"},
        "DestinationCidrBlock":"0.0.0.0/0",
        "GatewayId":{"Ref":"CRMVPCIG"}
      }
    },
    "CRMVPCPVTRTT":{
      "Type":"AWS::EC2::RouteTable",
      "DependsOn":["CRMVPCNET"],
      "Properties":{
        "VpcId":{"Ref":"CRMVPCNET"},
        "Tags":[
          {"Key":"Name","Value":"crm-vpc-pvt-rtt"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"crm"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "CRMVPCRedisSN1":{
      "Type":"AWS::EC2::Subnet",
      "DependsOn":["CRMVPCNET"],
      "Properties":{
        "VpcId":{"Ref":"CRMVPCNET"},
        "CidrBlock":{"Fn::If":["IsPRD","11.1.1.0/24","12.1.1.0/24"]},
        "AvailabilityZone":{"Fn::Join":["",[{"Ref":"AWS::Region"},"a"]]},
        "Tags":[
          {"Key":"Name","Value":"crm-vpc-redis-sn-1"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"crm"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "CRMVPCRedisSN1RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "DependsOn":["CRMVPCPVTRTT","CRMVPCRedisSN1"],
      "Properties":{
        "RouteTableId":{"Ref":"CRMVPCPVTRTT"},
        "SubnetId":{"Ref":"CRMVPCRedisSN1"}
      }
    },
    "CRMVPCRedisSN2":{
      "Type":"AWS::EC2::Subnet",
      "DependsOn":["CRMVPCNET"],
      "Properties":{
        "VpcId":{"Ref":"CRMVPCNET"},
        "CidrBlock":{"Fn::If":["IsPRD","11.1.2.0/24","12.1.2.0/24"]},
        "AvailabilityZone":{"Fn::Join":["",[{"Ref":"AWS::Region"},"b"]]},
        "Tags":[
          {"Key":"Name","Value":"crm-vpc-redis-sn-2"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"crm"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "CRMVPCRedisSN2RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "DependsOn":["CRMVPCPVTRTT","CRMVPCRedisSN2"],
      "Properties":{
        "RouteTableId":{"Ref":"CRMVPCPVTRTT"},
        "SubnetId":{"Ref":"CRMVPCRedisSN2"}
      }
    },
    "CRMVPCAppSN1":{
      "Type":"AWS::EC2::Subnet",
      "DependsOn":["CRMVPCNET"],
      "Properties":{
        "VpcId":{"Ref":"CRMVPCNET"},
        "CidrBlock":{"Fn::If":["IsPRD","11.1.3.0/24","12.1.3.0/24"]},
        "AvailabilityZone":{"Fn::Join":["",[{"Ref":"AWS::Region"},"a"]]},
        "Tags":[
          {"Key":"Name","Value":"crm-vpc-app-sn-1"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"crm"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "CRMVPCAppSN1RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "DependsOn":["CRMVPCPVTRTT","CRMVPCAppSN1"],
      "Properties":{
        "RouteTableId":{"Ref":"CRMVPCPVTRTT"},
        "SubnetId":{"Ref":"CRMVPCAppSN1"}
      }
    },
    "CRMVPCAppSN2":{
      "Type":"AWS::EC2::Subnet",
      "DependsOn":["CRMVPCNET"],
      "Properties":{
        "VpcId":{"Ref":"CRMVPCNET"},
        "CidrBlock":{"Fn::If":["IsPRD","11.1.4.0/24","12.1.4.0/24"]},
        "AvailabilityZone":{"Fn::Join":["",[{"Ref":"AWS::Region"},"b"]]},
        "Tags":[
          {"Key":"Name","Value":"crm-vpc-app-sn-2"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"crm"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "CRMVPCAppSN2RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "DependsOn":["CRMVPCPVTRTT","CRMVPCAppSN2"],
      "Properties":{
        "RouteTableId":{"Ref":"CRMVPCPVTRTT"},
        "SubnetId":{"Ref":"CRMVPCAppSN2"}
      }
    },
    "CRMVPCNginxSN1":{
      "Type":"AWS::EC2::Subnet",
      "DependsOn":["CRMVPCNET"],
      "Properties":{
        "VpcId":{"Ref":"CRMVPCNET"},
        "CidrBlock":{"Fn::If":["IsPRD","11.1.5.0/24","12.1.5.0/24"]},
        "AvailabilityZone":{"Fn::Join":["",[{"Ref":"AWS::Region"},"a"]]},
        "Tags":[
          {"Key":"Name","Value":"crm-vpc-nginx-sn-1"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"crm"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "CRMVPCNginxSN1RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "DependsOn":["CRMVPCPVTRTT","CRMVPCNginxSN1"],
      "Properties":{
        "RouteTableId":{"Ref":"CRMVPCPVTRTT"},
        "SubnetId":{"Ref":"CRMVPCNginxSN1"}
      }
    },
    "CRMVPCNginxSN2":{
      "Type":"AWS::EC2::Subnet",
      "DependsOn":["CRMVPCNET"],
      "Properties":{
        "VpcId":{"Ref":"CRMVPCNET"},
        "CidrBlock":{"Fn::If":["IsPRD","11.1.6.0/24","12.1.6.0/24"]},
        "AvailabilityZone":{"Fn::Join":["",[{"Ref":"AWS::Region"},"b"]]},
        "Tags":[
          {"Key":"Name","Value":"crm-vpc-nginx-sn-2"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"crm"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "CRMVPCNginxSN2RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "DependsOn":["CRMVPCPVTRTT","CRMVPCNginxSN2"],
      "Properties":{
        "RouteTableId":{"Ref":"CRMVPCPVTRTT"},
        "SubnetId":{"Ref":"CRMVPCNginxSN2"}
      }
    },
    "CRMVPCBastionSN1":{
      "Type":"AWS::EC2::Subnet",
      "DependsOn":["CRMVPCNET"],
      "Properties":{
        "VpcId":{"Ref":"CRMVPCNET"},
        "CidrBlock":{"Fn::If":["IsPRD","11.1.7.0/24","12.1.7.0/24"]},
        "AvailabilityZone":{"Fn::Join":["",[{"Ref":"AWS::Region"},"a"]]},
        "Tags":[
          {"Key":"Name","Value":"crm-vpc-bastion-sn-1"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"crm"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "CRMVPCBastionSN1RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "DependsOn":["CRMVPCPUBRTT","CRMVPCBastionSN1"],
      "Properties":{
        "RouteTableId":{"Ref":"CRMVPCPUBRTT"},
        "SubnetId":{"Ref":"CRMVPCBastionSN1"}
      }
    },
    "CRMVPCBastionSN2":{
      "Type":"AWS::EC2::Subnet",
      "DependsOn":["CRMVPCNET"],
      "Properties":{
        "VpcId":{"Ref":"CRMVPCNET"},
        "CidrBlock":{"Fn::If":["IsPRD","11.1.8.0/24","12.1.8.0/24"]},
        "AvailabilityZone":{"Fn::Join":["",[{"Ref":"AWS::Region"},"b"]]},
        "Tags":[
          {"Key":"Name","Value":"crm-vpc-bastion-sn-2"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"crm"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "CRMVPCBastionSN2RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "DependsOn":["CRMVPCPUBRTT","CRMVPCBastionSN2"],
      "Properties":{
        "RouteTableId":{"Ref":"CRMVPCPUBRTT"},
        "SubnetId":{"Ref":"CRMVPCBastionSN2"}
      }
    },
    "CRMVPCNATSN1":{
      "Type":"AWS::EC2::Subnet",
      "DependsOn":["CRMVPCNET"],
      "Properties":{
        "VpcId":{"Ref":"CRMVPCNET"},
        "CidrBlock":{"Fn::If":["IsPRD","11.1.9.0/24","12.1.9.0/24"]},
        "AvailabilityZone":{"Fn::Join":["",[{"Ref":"AWS::Region"},"a"]]},
        "Tags":[
          {"Key":"Name","Value":"crm-vpc-nat-sn-1"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"crm"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "CRMVPCNATSN1RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "DependsOn":["CRMVPCPUBRTT","CRMVPCNATSN1"],
      "Properties":{
        "RouteTableId":{"Ref":"CRMVPCPUBRTT"},
        "SubnetId":{"Ref":"CRMVPCNATSN1"}
      }
    },
    "CRMVPCNATSN2":{
      "Type":"AWS::EC2::Subnet",
      "DependsOn":["CRMVPCNET"],
      "Properties":{
        "VpcId":{"Ref":"CRMVPCNET"},
        "CidrBlock":{"Fn::If":["IsPRD","11.1.10.0/24","12.1.10.0/24"]},
        "AvailabilityZone":{"Fn::Join":["",[{"Ref":"AWS::Region"},"b"]]},
        "Tags":[
          {"Key":"Name","Value":"crm-vpc-nat-sn-2"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"crm"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "CRMVPCNATSN2RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "DependsOn":["CRMVPCPUBRTT","CRMVPCNATSN2"],
      "Properties":{
        "RouteTableId":{"Ref":"CRMVPCPUBRTT"},
        "SubnetId":{"Ref":"CRMVPCNATSN2"}
      }
    },
    "CRMVPCLoadbalancerSN1":{
      "Type":"AWS::EC2::Subnet",
      "DependsOn":["CRMVPCNET"],
      "Properties":{
        "VpcId":{"Ref":"CRMVPCNET"},
        "CidrBlock":{"Fn::If":["IsPRD","11.1.11.0/24","12.1.11.0/24"]},
        "AvailabilityZone":{"Fn::Join":["",[{"Ref":"AWS::Region"},"a"]]},
        "Tags":[
          {"Key":"Name","Value":"crm-vpc-loadbalancer-sn-1"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"crm"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "CRMVPCLoadbalancerSN1RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "DependsOn":["CRMVPCPUBRTT","CRMVPCLoadbalancerSN1"],
      "Properties":{
        "RouteTableId":{"Ref":"CRMVPCPUBRTT"},
        "SubnetId":{"Ref":"CRMVPCLoadbalancerSN1"}
      }
    },
    "CRMVPCLoadbalancerSN2":{
      "Type":"AWS::EC2::Subnet",
      "DependsOn":["CRMVPCNET"],
      "Properties":{
        "VpcId":{"Ref":"CRMVPCNET"},
        "CidrBlock":{"Fn::If":["IsPRD","11.1.12.0/24","12.1.12.0/24"]},
        "AvailabilityZone":{"Fn::Join":["",[{"Ref":"AWS::Region"},"b"]]},
        "Tags":[
          {"Key":"Name","Value":"crm-vpc-loadbalancer-sn-2"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"crm"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "CRMVPCLoadbalancerSN2RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "DependsOn":["CRMVPCPUBRTT","CRMVPCLoadbalancerSN2"],
      "Properties":{
        "RouteTableId":{"Ref":"CRMVPCPUBRTT"},
        "SubnetId":{"Ref":"CRMVPCLoadbalancerSN2"}
      }
    },
    "CRMVPCRedisSG":{
      "Type":"AWS::EC2::SecurityGroup",
      "DependsOn":["CRMVPCNET","CRMVPCAppSG","CRMVPCBastionSG"],
      "Properties":{
        "GroupName":"crm-vpc-redis-sg",
        "GroupDescription":"CRM VPC Redis security group.",
        "VpcId":{"Ref":"CRMVPCNET"},
        "SecurityGroupIngress":[
          {"IpProtocol":"tcp","FromPort":3000,"ToPort":3000,"SourceSecurityGroupId":{"Ref":"CRMVPCAppSG"}},
          {"IpProtocol":"tcp","FromPort":22,"ToPort":22,"SourceSecurityGroupId":{"Ref":"CRMVPCBastionSG"}}
        ],
        "SecurityGroupEgress":[
          {"IpProtocol":"-1","CidrIp":"0.0.0.0/0"}
        ],
        "Tags":[
          {"Key":"Name","Value":"crm-vpc-redis-sg"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"crm"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "CRMVPCAppSG":{
      "Type":"AWS::EC2::SecurityGroup",
      "DependsOn":["CRMVPCNET","CRMVPCNginxSG","CRMVPCLoadbalancerSG","CRMVPCBastionSG"],
      "Properties":{
        "GroupName":"crm-vpc-app-sg",
        "GroupDescription":"CRM VPC App security group.",
        "VpcId":{"Ref":"CRMVPCNET"},
        "SecurityGroupIngress":[
          {"IpProtocol":"tcp","FromPort":2000,"ToPort":2000,"SourceSecurityGroupId":{"Ref":"CRMVPCNginxSG"}},
          {"IpProtocol":"tcp","FromPort":2000,"ToPort":2000,"SourceSecurityGroupId":{"Ref":"CRMVPCLoadbalancerSG"}},
          {"IpProtocol":"tcp","FromPort":22,"ToPort":22,"SourceSecurityGroupId":{"Ref":"CRMVPCBastionSG"}}
        ],
        "SecurityGroupEgress":[
          {"IpProtocol":"-1","CidrIp":"0.0.0.0/0"}
        ],
        "Tags":[
          {"Key":"Name","Value":"crm-vpc-app-sg"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"crm"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "CRMVPCNginxSG":{
      "Type":"AWS::EC2::SecurityGroup",
      "DependsOn":["CRMVPCNET","CRMVPCLoadbalancerSG","CRMVPCBastionSG"],
      "Properties":{
        "GroupName":"crm-vpc-nginx-sg",
        "GroupDescription":"CRM VPC Nginx security group.",
        "VpcId":{"Ref":"CRMVPCNET"},
        "SecurityGroupIngress":[
          {"IpProtocol":"tcp","FromPort":80,"ToPort":80,"SourceSecurityGroupId":{"Ref":"CRMVPCLoadbalancerSG"}},
          {"IpProtocol":"tcp","FromPort":22,"ToPort":22,"SourceSecurityGroupId":{"Ref":"CRMVPCBastionSG"}}
        ],
        "SecurityGroupEgress":[
          {"IpProtocol":"-1","CidrIp":"0.0.0.0/0"}
        ],
        "Tags":[
          {"Key":"Name","Value":"crm-vpc-nginx-sg"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"crm"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "CRMVPCBastionSG":{
      "Type":"AWS::EC2::SecurityGroup",
      "DependsOn":["CRMVPCNET"],
      "Properties":{
        "GroupName":"crm-vpc-bastion-sg",
        "GroupDescription":"CRM VPC bastion security group.",
        "VpcId":{"Ref":"CRMVPCNET"},
        "SecurityGroupIngress":[
          {"IpProtocol":"tcp","FromPort":22,"ToPort":22,"CidrIp":"0.0.0.0/0"}
        ],
        "SecurityGroupEgress":[
          {"IpProtocol":"-1","CidrIp":"0.0.0.0/0"}
        ],
        "Tags":[
          {"Key":"Name","Value":"crm-vpc-bastion-sg"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"crm"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "CRMVPCNATSG":{
      "Type":"AWS::EC2::SecurityGroup",
      "DependsOn":["CRMVPCNET"],
      "Properties":{
        "GroupName":"crm-vpc-nat-sg",
        "GroupDescription":"CRM VPC NAT security group.",
        "VpcId":{"Ref":"CRMVPCNET"},
        "SecurityGroupIngress":[
          {"IpProtocol":"-1","CidrIp":{"Fn::If":["IsPRD","11.1.0.0/16","12.1.0.0/16"]}}
        ],
        "SecurityGroupEgress":[
          {"IpProtocol":"-1","CidrIp":"0.0.0.0/0"}
        ],
        "Tags":[
          {"Key":"Name","Value":"crm-vpc-nat-sg"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"crm"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "CRMVPCLoadbalancerSG":{
      "Type":"AWS::EC2::SecurityGroup",
      "DependsOn":["CRMVPCNET"],
      "Properties":{
        "GroupName":"crm-vpc-loadbalancer-sg",
        "GroupDescription":"CRM VPC loadbalancer security group.",
        "VpcId":{"Ref":"CRMVPCNET"},
        "SecurityGroupIngress":[
          {"IpProtocol":"tcp","FromPort":80,"ToPort":80,"CidrIp":"0.0.0.0/0"}
        ],
        "SecurityGroupEgress":[
          {"IpProtocol":"-1","CidrIp":"0.0.0.0/0"}
        ],
        "Tags":[
          {"Key":"Name","Value":"crm-vpc-loadbalancer-sg"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"crm"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "CRMS3AppSTTBKT":{
      "Type":"AWS::S3::Bucket",
      "Properties":{
        "BucketName":{"Fn::Join":["-",[{"Ref":"S3BucketPrefix"},"sloopstash",{"Ref":"Environment"},"crm-s3-app-stt-bkt"]]},
        "AccessControl":"Private",
        "BucketEncryption":{
          "ServerSideEncryptionConfiguration":[
            {"ServerSideEncryptionByDefault":{"SSEAlgorithm":"AES256"}}
          ]
        },
        "PublicAccessBlockConfiguration":{
          "BlockPublicAcls":true,
          "BlockPublicPolicy":true,
          "IgnorePublicAcls":true,
          "RestrictPublicBuckets":true
        },
        "CorsConfiguration":{
          "CorsRules":[
            {
              "Id":001,
              "AllowedOrigins":["*"],
              "AllowedMethods":["GET","HEAD"],
              "AllowedHeaders":["*"],
              "ExposedHeaders":[],
              "MaxAge":86400
            }
          ]
        },
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["-",[{"Ref":"S3BucketPrefix"},"sloopstash",{"Ref":"Environment"},"crm-s3-app-stt-bkt"]]}},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"crm"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "CRMCloudFrontAppOAI":{
      "Type":"AWS::CloudFront::CloudFrontOriginAccessIdentity",
      "Properties":{
        "CloudFrontOriginAccessIdentityConfig":{
          "Comment":"crm-cloud-front-app-oai"
        }
      }
    },
    "CRMCloudFrontAppSTTDST":{
      "Type":"AWS::CloudFront::Distribution",
      "DependsOn":["CRMS3AppSTTBKT","CRMCloudFrontAppOAI"],
      "Properties":{
        "DistributionConfig":{
          "Comment":"CRM CloudFront App static distribution.",
          "Origins":[{
            "DomainName":{"Fn::Join":["-",[{"Ref":"S3BucketPrefix"},"sloopstash",{"Ref":"Environment"},"crm-s3-stt-bkt.s3.amazonaws.com"]]},
            "Id":{"Fn::Join":["-",["S3",{"Ref":"CRMS3AppSTTBKT"}]]},
            "S3OriginConfig":{
              "OriginAccessIdentity":{
                "Fn::Join":["/",["origin-access-identity","cloudfront",{"Ref":"CRMCloudFrontAppOAI"}]]
              }
            }
          }],
          "DefaultCacheBehavior":{
            "AllowedMethods":["GET","HEAD"],
            "CachedMethods":["GET","HEAD"],
            "Compress":true,
            "DefaultTTL":86400,
            "MinTTL":0,
            "MaxTTL" :31536000,
            "SmoothStreaming":false,
            "TargetOriginId":{"Fn::Join":["-",["S3",{"Ref":"CRMS3AppSTTBKT"}]]},
            "ViewerProtocolPolicy":"allow-all",
            "ForwardedValues":{
              "QueryString":false,
              "Cookies":{"Forward":"none"},
              "Headers":["Origin","Access-Control-Request-Headers","Access-Control-Request-Method"]
            }
          },
          "Enabled":true,
          "HttpVersion":"http2",
          "IPV6Enabled":false,
          "PriceClass":"PriceClass_All"
        },
        "Tags":[
          {"Key":"Name","Value":"crm-cloud-front-app-stt-dst"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"crm"},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "CRMEC2KeyPair":{
      "Type":"AWS::EC2::KeyPair",
      "Properties":{
        "KeyName":"crm-ec2-key-pair",
        "KeyType":"rsa",
        "PublicKeyMaterial":{"Ref":"SSHPublicKey"},
        "Tags":[
          {"Key":"Name","Value":"crm-ec2-key-pair"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"crm"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "CRMEC2BastionINST1":{
      "Type":"AWS::EC2::Instance",
      "DependsOn":["CRMIAMEC2RLINSTPF","CRMVPCNET","CRMVPCBastionSN1","CRMVPCBastionSG"],
      "Properties":{
        "IamInstanceProfile":{"Ref":"CRMIAMEC2RLINSTPF"},
        "NetworkInterfaces":[{
          "DeviceIndex":"0",
          "SubnetId":{"Ref":"CRMVPCBastionSN1"},
          "PrivateIpAddress":{"Fn::If":["IsPRD","11.1.7.10","12.1.7.10"]},
          "AssociatePublicIpAddress":true,
          "GroupSet":[{"Ref":"CRMVPCBastionSG"}],
          "DeleteOnTermination":true
        }],
        "ImageId":{"Ref":"EC2AMIID"},
        "InstanceType":"t3a.micro",
        "KeyName":{"Ref":"CRMEC2KeyPair"},
        "EbsOptimized":false,
        "CreditSpecification":{"CPUCredits":"standard"},
        "InstanceInitiatedShutdownBehavior":"stop",
        "DisableApiTermination":false,
        "Tenancy":"default",
        "Tags":[
          {"Key":"Name","Value":"crm-ec2-bastion-inst-1"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"crm"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    }
  },
  "Outputs":{
    "CRMCloudFrontAppSTTDSTDomain":{
      "Value":{"Fn::GetAtt":["CRMCloudFrontAppSTTDST","DomainName"]}
    }
  }
}
